--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -112,3 +112,109 @@ ul
 
 
 @import "font-awesome.styl"
+
+
+@keyframes view_loading_fadein
+  0%
+    opacity(0)
+  
+  15%
+    opacity(0)
+  
+  100%
+    opacity(1)
+
+.view_loading_overlay
+  animation-name view_loading_fadein
+  animation-duration 1s
+  animation-timing-function cubic-bezier(0, 0, 1, 1)
+  animation-fill-mode forwards
+  min-height 200px
+
+  &, .backdrop
+    left 0px
+    position absolute
+    top 0px
+    height 100%
+    width 100%
+
+  .backdrop
+    background-color rgba(100, 100, 100, 0.6)
+    opacity(0.5)
+
+  span
+    font-size 2em
+    font-weight bold
+    left 50%
+    margin -1em 0 0 -4em
+    position absolute
+    top 50%
+
+  .loading_balls_container
+    height 20px
+    left 50%
+    margin 0 0 0 -128px
+    position absolute
+    top 50%
+    width 256px
+  
+    & > *
+      background-color #000000
+      position absolute
+      top 0
+      left 0
+      width 20px
+      height 20px
+      border-radius 10px
+      animation-name loading_balls
+      animation-duration 2s
+      animation-iteration-count infinite
+      animation-timing-function linear
+  
+    .ball_1
+      animation-delay 0s
+  
+    .ball_2
+      animation-delay .5s
+  
+    .ball_3
+      animation-delay 1s
+  
+    .ball_4
+      animation-delay 1.5s
+
+
+@keyframes loading_balls 
+  0%
+    left 0px
+    opacity(.6)
+  
+  12%
+    top -16px
+  
+  25%
+    left 78px
+    opacity(.1)
+    top -20px
+  
+  37%
+    top -16px
+  
+  50%
+    left 146px
+    opacity(.6)
+  
+  62%
+    top 16px
+  
+  75%
+    left 78px
+    opacity(1)
+    top 20px
+  
+  87%
+    top 16px
+  
+  100%
+    left 0px
+    opacity(.8)
