--- a/frontend/app/styles/style.styl
+++ b/frontend/app/styles/style.styl
@@ -218,3 +218,10 @@ ul
   100%
     left 0px
     opacity(.8)
+
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
